# ga4gh-pyseqcol

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: run_tests.yaml
src/pyseqcol/: __init__.py  exceptions.py  util.py
tests/: conftest.py  test_collection.py  test_util.py
